--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ html,
 body {
   height: 100%;
 }
-
 body {
   display: flex;
   justify-content: center;
@@ -12,147 +11,194 @@ body {
   margin: 20px 0;
   text-align: center;
   overflow: hidden;
-background: linear-gradient(133deg, rgba(203, 25, 25, 1) 6%, rgba(207, 10, 27, 1) 54%, rgba(255, 0, 39, 1) 85%);
-background-repeat: no-repeat;
-background-size: cover;
-width: 100vw;
-height: 100vh;
+  background: linear-gradient(
+    133deg,
+    rgba(203, 25, 25, 1) 6%,
+    rgba(207, 10, 27, 1) 54%,
+    rgba(255, 0, 39, 1) 85%
+  );
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
 }
-
 .bg-img {
   width: 50%;
-  height: 50%;
-background-image: url(../images/png-clipart-paper-removebg-preview.png);
-background-repeat: no-repeat;
-background-size: contain;
-position: absolute;
-top: 0;
-left: 0;
-}
-
-.bg-img-2 {
-width: 50%;
   height: 50%;
   background-image: url(../images/png-clipart-paper-removebg-preview.png);
   background-repeat: no-repeat;
   background-size: contain;
   position: absolute;
-bottom: 0;
+  top: 0;
+  left: 0;
+}
+.bg-img-2 {
+  width: 50%;
+  height: 50%;
+  background-image: url(../images/png-clipart-paper-removebg-preview.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  bottom: 0;
   right: 0;
   rotate: 180deg;
 }
-
 h1 {
   font-size: 5em;
-  font: bold 7.5vw/1.6 'Signika', sans-serif;
+  font: bold 7.5vw/1.6 "Signika", sans-serif;
   user-select: none;
 }
-
 h1 span {
   display: inline-block;
-  animation: float .2s ease-in-out infinite;
+  animation: float 0.2s ease-in-out infinite;
 }
-
 @keyframes float {
-
   0%,
   100% {
     transform: none;
   }
-
   33% {
     transform: translateY(-1px) rotate(-2deg);
   }
-
   66% {
     transform: translateY(1px) rotate(2deg);
   }
 }
-
 body:hover span {
-  animation: bounce .6s;
+  animation: bounce 0.6s;
 }
-
 @keyframes bounce {
-
   0%,
   100% {
     transform: translate(0);
   }
-
   25% {
     transform: rotateX(20deg) translateY(2px) rotate(-3deg);
   }
-
   50% {
     transform: translateY(-20px) rotate(3deg) scale(1.1);
   }
 }
-
 .words {
   color: rgb(40, 139, 29);
- 
 }
-/*
-span:nth-child(4n-1) {
-  color: hsl(135, 35%, 55%);
-  text-shadow: 1px 1px hsl(135, 35%, 45%), 2px 2px hsl(135, 35%, 45%), 3px 3px hsl(135, 35%, 45%), 4px 4px hsl(135, 35%, 45%);
-}
-
-span:nth-child(4n-2) {
-  color: hsl(155, 35%, 60%);
-  text-shadow: 1px 1px hsl(155, 25%, 50%), 2px 2px hsl(155, 25%, 50%), 3px 3px hsl(155, 25%, 50%), 4px 4px hsl(140, 25%, 50%);
-}
-
-span:nth-child(4n-3) {
-  color: hsl(30, 65%, 60%);
-  text-shadow: 1px 1px hsl(30, 45%, 50%), 2px 2px hsl(30, 45%, 50%), 3px 3px hsl(30, 45%, 50%), 4px 4px hsl(30, 45%, 50%);
-}
-*/
-
 .toy {
   position: absolute;
-  top: -474px;
- 
-  
+  top: 0;
+  right: 20vw;
+  transform: scale(0);
 }
-
 .toy-animation {
-animation: toys .8s forwards ease-in-out;
+  animation: toys 0.8s forwards ease-in-out;
 }
-
 @keyframes toys {
-
-100% {
-  transform: translateY(400px);
-}
-}
-
-.text {
-    font-family: "Agu Display", serif;
-      font-optical-sizing: auto;
-      font-weight: 400;
-      font-style: normal;
-      font-variation-settings:
-        "MORF" 0;
-        font-size: 8vw;
-        z-index: 20;
-        color: rgb(226, 235, 224);
-
-}
-
-.text-animation {
-  animation: text .9s forwards ease-in-out;
-}
-
-@keyframes text {
-
   0% {
     transform: scale(0);
   }
-
-   100% {
-      transform: scale(1);
-      transform: translateY(30%);
+  100% {
+    transform: scale(1);
+  }
+}
+.text {
+  font-family: "Agu Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "MORF" 0;
+  font-size: 8vh;
+  z-index: 20;
+  color: rgb(226, 235, 224);
+}
+.text-animation {
+  animation: text 0.9s forwards ease-in-out;
+}
+@keyframes text {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.text-animation {
+  animation: text 0.9s forwards ease-in-out;
+}
+.elements-decor-animation {
+  animation: decor 0.4s forwards ease-in-out;
+}
+@keyframes decor {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.fire,
+.fire-2,
+.fire-3 {
+  position: absolute;
+  transform: scale(0);
+  width: 400px;
+  height: 400px;
+}
+.fire {
+  bottom: 15vw;
+  left: 10vw;
+}
+.fire-2 {
+  bottom: 0vw;
+  left: 0vw;
+}
+.fire-3 {
+  bottom: 20vw;
+  left: -2vw;
+}
+.fire-animation {
+  animation: fire 0.5s infinite;
+  animation-fill-mode: backwards;
+  animation-delay: 1s;
+}
+@keyframes fire {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@media (max-width: 692px) {
+  .text {
+    font-size: 6vh;
+  }
+  .bg-img-2 {
+    width: 70%;
+    height: 70%;
+  }
+  .toy {
+    right: 10vw;
+  }
+    .fire,
+    .fire-2,
+    .fire-3 {
+      position: absolute;
+      transform: scale(0);
+      width: 300px;
+      height: 300px;
+    }
+  
+    .fire {
+      bottom: 30vw;
+      left: 0vw;
+    }
+  
+    .fire-2 {
+      bottom: 0vw;
+      left: 5vw;
+    }
+  
+    .fire-3 {
+      bottom: 25vw;
+      left: 30vw;
     }
 }
